# LISFLOOD-FP-8.1

./: .gitignore  CMakeLists.txt  CMakeSettings.json  INSTALL.md  LISFLOOD-FP user manual +bridge.docx  LISFLOOD-FP user manual.docx  README.md  ch_flow.cpp  config.default.cmake  infevap.cpp  input.cpp  launch_vs2019_intel64.bat  lisflood.cpp  lisflood.h  lisflood.sln  lisflood.vcxproj  lisflood.vcxproj.filters  lisflood_double_all_channel_Mac_OS  lisflood_double_rect_Mac_OS  lisflood_float_all_channel_Mac_OS  lisflood_float_rect_Mac_OS  lisflood_intel.sln  lisflood_intel.vcxproj  make_block0bal0.mk  make_block0bal1.mk  make_block1bal0.mk  make_block1bal1.mk  make_disable_vec.mk  make_disable_wet_dry.mk  make_qmode1.mk  make_qmode2.mk  makefile  pars.cpp  result_check.mk  utility.cpp  utility.h
My Advisor Results - lisflood/: My Advisor Results - lisflood.advixeproj
config/: local
cuda/: cuda_max_field.cu  cuda_solver.templates.cu  cuda_util.templates.cu
cuda/acc/: cuda_acc_flow.cu  cuda_acc_flow.cuh  cuda_acc_max.cu  cuda_acc_max.cuh  cuda_acc_simulate.cu  cuda_acc_snapshot.cu  cuda_acc_snapshot.cuh  cuda_acc_solver.cu  cuda_acc_solver.cuh
cuda/acc_nugrid/: AssembledSolution.h  Boundaries.h  Boundary.h  ChildScaleCoefficients.h  Detail.h  DetailChildren.h  Details.h  GaugePoints.h  Maxes.h  NonUniformInterfaces.h  NonUniformNeighbours.h  ParentScaleCoefficient.h  PointSources.h  Rainfall_uniform.h  ScaleChildren.h  ScaleCoefficients.h  SubDetail.h  SubDetails.h  calculate_dt.cu  calculate_dt.cuh  compact.cuh  compaction.cu  compaction.cuh  compute_q.cu  compute_q.cuh  copy_finest_coefficients.cu  copy_finest_coefficients.cuh  count_interfaces_per_neighbours.cu  count_interfaces_per_neighbours.cuh  count_neighbours.cu  count_neighbours.cuh  cuda_acc_nugrid_simulate.cu  cuda_utils.cu  cuda_utils.cuh  dilate.cuh  encode_and_thresh_topo.cu  encode_and_thresh_topo.cuh  encode_details.cuh  encode_scale.cuh  find_interfaces.cu  (+100 more)
cuda/dg2/: cuda_dg2_dem.cu  cuda_dg2_dem.cuh  cuda_dg2_flow.cu  cuda_dg2_flow.cuh  cuda_dg2_simulate.cu  cuda_dg2_slope_limit.cu  cuda_dg2_slope_limit.cuh  cuda_dg2_snapshot.cuh  cuda_dg2_solver.cuh
cuda/fv1/: cuda_fv1_flow.cu  cuda_fv1_flow.cuh  cuda_fv1_simulate.cu  cuda_fv1_snapshot.cu  cuda_fv1_snapshot.cuh  cuda_fv1_solver.cu  cuda_fv1_solver.cuh
cuda/fv2/: cuda_fv2_dem.cu  cuda_fv2_dem.cuh  cuda_fv2_flow.cu  cuda_fv2_flow.cuh  cuda_fv2_simulate.cu  cuda_fv2_slope_limit.cu  cuda_fv2_slope_limit.cuh  cuda_fv2_snapshot.cuh  cuda_fv2_solver.cu  cuda_fv2_solver.cuh
linuxdep/: build.sh
lisflood2/: file_tool.cpp  lis2_output.cpp  lisflood_processing.cpp  sgm_fast.cpp
postprocess/: DG2downscale.cpp
preprocess/: generateDG2DEM.cpp  generateDG2start.cpp
rain/: rain.tpp
swe/: dg2new.cpp  dg2new.h  fields.cpp
swe/dg2/: fields.cpp  friction.cpp
test/: checks.h  makefile  test_dg2.cpp  test_flux.cpp  test_fv1.cpp  test_slope_limiter.cpp
testing/: Instructions.doc  lisflood test models.xls  lisflood_lin_old  lisflood_test2  lisflood_test2.bat  lisflood_test2_BC  lisflood_test2_compare.bat  lisflood_test2rm  lisflood_test2rm_BC
testing/T001_buscot/: sargrid.asc
testing/T002_BCTest/: BCTest.par  BCTest.stage  BCTest_SGC.par
testing/T002b_BCTest/: BCTest.bci  BCTest.gauge  BCTest.par  BCTest_SGC.par  BCTest_SGC_bank.ascii  BCTest_SGC_bed.ascii  BCTest_SGC_width.ascii  BCTest_dtm.ascii  BCTest_in.bci  BCTest_in.bdy  BCTest_in_SGC.par  BCTest_in_start.ascii
testing/T002c_BCTest/: BCTest_EW.bci  BCTest_EW_SGC_bank.ascii  BCTest_EW_SGC_width.ascii  BCTest_EW_c.par  BCTest_EW_c_SGC.par  BCTest_EW_dtm.ascii  BCTest_NS.bci  BCTest_NS_SGC_bed.ascii  BCTest_NS_SGC_width.ascii  BCTest_NS_c.par  BCTest_NS_c_SGC.par  BCTest_NS_dtm.ascii
testing/T003_CTAna/: CTAna_D.par  CTAna_D.river  CTAna_K.par  CTAna_K.river  Channel Test Analytical.xls
testing/T004_CTDiffZone/: CTDiffZone_D.par  CTDiffZone_D.river  CTDiffZone_K.par  CTDiffZone_K.river  Channel Test Diffusive.xls
testing/T005_CTFullZone/: CTFullZone_D.par  CTFullZone_D.river  CTFullZone_K.par  CTFullZone_K.river  Channel Test Full.xls
testing/T006_CTKinZone/: CTKinZone_D.par  CTKinZone_D.river  CTKinZone_K.par  CTKinZone_K.river  CTTests_dem.ascii  Channel Test Kinematic.xls
testing/T007_CTBranchFine/: CTBranchFine.river  CTBranchFine_D.par  CTBranchFine_K.par  CTBranchFine_dem.ascii  profile Branchtest.xls
testing/T008_CTBankFlow/: CT_BankFlow plots.xls  CT_BankFlow.bci  CT_BankFlow.par  CT_BankFlow.river  CT_BankFlow_dem.ascii
testing/T009_CTMultitest/: CT_Fine_dem.ascii  CT_multitest.river  CT_multitest_D.par  CT_multitest_K.par  profile multitest.xls
testing/T010_planar_beach/: planar_beach.bci  planar_beach.bdy  planar_beach.dem.ascii  planar_beach.par
testing/T011_CTDecouple/: CT_Decouple.bci  CT_Decouple.bdy  CT_Decouple.overpass  CT_Decouple.river  CT_Decouple_D.par  CT_Decouple_K.par  CT_Decouple_dem.ascii  profile Decouple test.xls
testing/T012_ETInfTest/: ETInfTest.par  ETInfTest_dtm.ascii  ETInfTest_start.ascii
testing/T013_CTFreeBC/: CTFreeBC.river  CTFreeBC_D.bdy  CTFreeBC_D.opts  CTFreeBC_D.par  CTFreeBC_dem.ascii  CTFreeBC_results.xlsx
testing/T014_MCTBranch/: MCTBranch_D.par  MCTBranch_K.par  MCTBranch_dem.ascii  Severn.river  Thames.river  test.rivers
testing/T015_SubGrid/: DEM2_y.asc  SGC_test.par  SGC_test_step.par  SGC_test_y.par  SGC_test_y_step.par  inflow_y.bci  width_y.asc
testing/T016_BridgeTests/: nswe model build.xlsx  readme.txt
testing/T016a_Bridge_nsew_4_inputs_SGM/: nswe_4in_SGC_DEM.asc  nswe_4in_SGC_SS.par  nswe_4in_SGC_width.asc
testing/T016a_Bridge_nsew_4_inputs_noSGC/: nswe_4in_BC_SS.bci  nswe_4in_DEM.asc  nswe_4in_SS.par
testing/T016b_Bridge_nsew_centre_input/: nswe_SGC_DEM.asc  nswe_SGC_SS.par  nswe_SGC_width.asc
testing/T016b_Bridge_nsew_centre_input_noSGC/: nswe_BC_SS.bci  nswe_DEM.asc  nswe_SS.par
testing/T016c_Bridge_orifice_test/: DEM-bed setup.xlsx  DEM_MT.asc  MT_SGC_chan.par  MT_SGC_orifice.par  MT_SGC_orifice_staggeredSS.par  bridge.weir  inflow_staggeredSS.txt  locations.stage  stage_check.xlsx
(+259 files in other folders)
